--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
      <div id="page1">
       <div class="video-container">
         <video autoplay muted loop class="video-background">
-          <source src="Untitled video - Made with Clipchamp (2).mp4" type="video/mp4">
+          <source src="Untitled video - Made with Clipchamp (1) (1).mp4" type="video/mp4">
           Your browser does not support the video tag.
         </video>
         <div class="video-text"> <meta charset="UTF-8">
