--- a/contact.html
+++ b/contact.html
@@ -23,19 +23,8 @@
     <section class="contact-form-section">
         <h2><i class="fas fa-envelope"></i> Get in Touch</h2>
         <form id="contactForm">
-            <div class="form-group">
-                <label for="name"><i class="fas fa-user"></i> Name:</label>
-                <input type="text" id="name" name="name" required>
-            </div>
-            <div class="form-group">
-                <label for="email"><i class="fas fa-envelope"></i> Email:</label>
-                <input type="email" id="email" name="email" required>
-            </div>
-            <div class="form-group">
-                <label for="message"><i class="fas fa-comment"></i> Message:</label>
-                <textarea id="message" name="message" rows="5" required></textarea>
-            </div>
-            <button type="submit"><i class="fas fa-paper-plane"></i> Send Message</button>
+          
+            <button type="submit"> <a href="https://forms.gle/w6dKNCLxtghy3XWH6"> For Any Queries</a> </button>
         </form>
     </section>
 
